--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
@@ -15,6 +16,7 @@
     "axios": "^0.20.0",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
+    "moment-timezone": "^0.5.31",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
