--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
