--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "build": "tsc",
+    "start": "node ./build/",
+    "exe": "npm run build && npm run start",
+    "dev": "nodemon --watch 'src/**' --ext 'ts,json' --ignore 'src/**/*.spec.ts' --exec npm run exe"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +17,17 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.1",
+    "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.12",
+    "@types/morgan": "^1.9.2",
+    "@types/mongoose": "^5.11.97",
+    "@types/nodemailer": "^6.4.2",
+    "nodemon": "^2.0.4",
+    "typescript": "^4.3.2"
   }
 }
