--- a/backend/package.json
+++ b/backend/package.json
@@ -2,18 +2,18 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node ./build/",
+    "start": "ts-node src/index.ts",
     "exe": "npm run build && npm run start",
-    "dev": "nodemon --watch 'src/**' --ext 'ts,json' --ignore 'src/**/*.spec.ts' --exec npm run exe"
+    "dev": "nodemon --watch src --ext ts --ignore *.test.ts,*.spec.ts --exec npm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
@@ -24,10 +24,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
-    "@types/morgan": "^1.9.2",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.2",
     "@types/nodemailer": "^6.4.2",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.7",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   }
 }
